Zombie Models Ready for phase 1